# my_opengl_learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  camera.h  glad.c  glad.h  main.cpp  shader.cpp  shader.h
shaders/: shader.fs  shader.vs
